package edu.fiuba.algo3.modelo.Enemigo;

import edu.fiuba.algo3.modelo.Parcela.Pasarela.Pasarela;

public class Hormiga extends Enemigo{

    public Hormiga(int unaVida, int unDanio, int unaVelocidad, int unaEnergia, int unaRecompensa, int unId) {
        super(unaVida, unDanio, unaVelocidad, unaEnergia, unaRecompensa, unId);
    }

}
