@startuml

abstract Enemigo {
    -danio
    -energia:int
    -velocidad:int
    +daniar(jugador: Jugador):void
    +recibirDanio(defensa: Defensa):void
    {abstract}+crearPieza(parcela:Parcela):void
    {abstract} +obtenerCreditos(jugador:Jugador):int
}

interface Morir {
    {abstract} -obtenerCreditos(jugador:Jugador):int
}

class Hormiga {
    -cantidadDeHormigas:int
    -CANTPARAEXTRA:int
    +crearPieza(parcela:Parcela):void
    -obtenerCreditos(jugador:Jugador):int
}

class Arania {
    +crearPieza(parcela:Parcela):void
    -obtenerCreditos(jugador:Jugador):int
}

Morir <|.. Enemigo
Enemigo <|-- Hormiga
Enemigo <|-- Arania
@enduml